--- a/001-porfolio-dev/src/components/Header.astro
+++ b/001-porfolio-dev/src/components/Header.astro
@@ -1,6 +1,6 @@
-<header class="flex justify-between items-center">
-    <img class="rounded-full w-12 h-12" src="../../public/img/yo.jpg" alt="default photo">
-    <nav>
+<header class="flex justify-between items-center py-3 w-[1120px]">
+    <img class="rounded-full w-12 h-12" src="img/yo.jpg" alt="default photo">
+    <nav class="flex flex-row gap-10 opacity-80">
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/projects">Projects</a>
