--- a/001-porfolio-dev/src/layouts/Layout.astro
+++ b/001-porfolio-dev/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "@fontsource-variable/onest"
 import Header from '../components/Header.astro';
 
 interface Props {
@@ -25,15 +26,17 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		
+		color-scheme: light dark;
 	}
 	html {
-		background: black;
-		font-family: system-ui, sans-serif;
+		
+		font-family: "Onest Variable",system-ui, sans-serif;
 	}
 	body{
+		background: #050505;
 		display: flex;
 		justify-content: center;
+		min-height: 100vh;
 	}
 	
 </style>
