--- a/001-porfolio-dev/src/pages/index.astro
+++ b/001-porfolio-dev/src/pages/index.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Badge from '../components/Badge.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 
 	<main>
-		<h1>Porfolio</h1>
+		<h1>Hey, soy DeiMoS <Badge> Disponible para trabajar</Badge></h1>
+		<h2>+2 experiencia. Desarrollador aplicaciones Web. De Gran Canaria, España.</h2>
 	</main>
+
 </Layout>
 
 
