--- a/001-porfolio-dev/src/pages/index.astro
+++ b/001-porfolio-dev/src/pages/index.astro
@@ -1,14 +1,34 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import Badge from '../components/Badge.astro';
+import SocialPill from '../components/SocialPill.astro';
+import LinkedInIcon from '../icons/LinkedIn.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 
 	<main>
-		<h1>Hey, soy DeiMoS <Badge> Disponible para trabajar</Badge></h1>
-		<h2>+2 experiencia. Desarrollador aplicaciones Web. De Gran Canaria, España.</h2>
+		<section class="w-full lg:w-[740px] mx-auto py-44">
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
+				Hey, soy Nagib 
+				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center">
+					<Badge>Disponible para trabajar</Badge>
+				</a>
+			</h1>
+			<h2 class="text-2xl text-wrap">
+				<span>+2 experiencia.</span> 
+				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span> 
+				<span class="text-red-200/90">De Gran Canaria, España.</span>
+				<span class="opacity-75">Especializado en crear aplicaciones únicas</span>
+			</h2>
+
+			<nav class="flex gap-x-2">
+				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
+					<LinkedInIcon class="w-6 h-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+						LinkedIn
+				</SocialPill>
+			</nav>
+		</section>
 	</main>
 
 </Layout>
