--- a/001-porfolio-dev/src/pages/index.astro
+++ b/001-porfolio-dev/src/pages/index.astro
@@ -3,12 +3,16 @@ import Layout from '../layouts/Layout.astro';
 import Badge from '../components/Badge.astro';
 import SocialPill from '../components/SocialPill.astro';
 import LinkedInIcon from '../icons/LinkedIn.astro';
+import GitHubIcon from '../icons/GitHub.astro';
+import MailIcon from '../icons/Mail.astro';
+import Experience from '../components/Experience.astro';
+import SectionContainer from '../components/SectionContainer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-
-	<main>
-		<section class="w-full lg:w-[740px] mx-auto py-44">
+<Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contrata a Nagib para crear tu aplicación web.">
+	<main class="px-4">
+		<SectionContainer>		
+			<img class="rounded-full size-12 mb-4" src="img/yo.jpg" alt="default photo">
 			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
 				Hey, soy Nagib 
 				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center">
@@ -22,13 +26,25 @@ import LinkedInIcon from '../icons/LinkedIn.astro';
 				<span class="opacity-75">Especializado en crear aplicaciones únicas</span>
 			</h2>
 
-			<nav class="flex gap-x-2">
+			<nav class="flex gap-x-4 mt-6">
 				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
-					<LinkedInIcon class="w-6 h-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+					<LinkedInIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
 						LinkedIn
 				</SocialPill>
+				<SocialPill href="https://github.com/DeiMoS-es">
+					<GitHubIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+						LinkedIn
+				</SocialPill>
+				<SocialPill href="https://github.com/DeiMoS-es">
+					<MailIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+						nagib.86@gmail.com
+				</MailIcon>
 			</nav>
-		</section>
+		</SectionContainer>
+
+		<SectionContainer>
+			<Experience />
+		</SectionContainer>
 	</main>
 
 </Layout>
