--- a/001-porfolio-dev/src/components/Experience.astro
+++ b/001-porfolio-dev/src/components/Experience.astro
@@ -3,21 +3,21 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
     {
-        date: 'February 2022',
-        title: 'Application UI code in Tailwind CSS',
-        description: 'Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.',
+        date: 'Junio-2022 Actualidad',
+        title: 'Programador Junior PhP/JavaScript - Hiberus Tecnología',
+        description: 'Participación en aplicación web de la empresa para subidas de CV usando Symphoy. Desarrollos en PhP y JavaScript para cliente.',
         link: '#'
     },
     {
-      date: "Septiembre 2022",
-      title: "Principal Frontend Engineer  − Adevinta Spain",
+      date: "Marzo-2022 Junio-2022",
+      title: "Practicas - Hiberus Tecnología",
       description:
-        "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+        "Desarrollo mis prácticas en el departamento de Data, desarrollando plantillas de visualización de datos en Java y Dashboards.",
     }
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">  
+<ol class="relative border-s border-gray-200 ml-3">  
     {
         EXPERIENCE.map(experience => (
             <li class="mb-10 ms-4">
