--- a/001-porfolio-dev/src/pages/index.astro
+++ b/001-porfolio-dev/src/pages/index.astro
@@ -7,42 +7,47 @@ import GitHubIcon from '../icons/GitHub.astro';
 import MailIcon from '../icons/Mail.astro';
 import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
+import Briefecase from '../icons/Briefecase.astro';
 ---
 
 <Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contrata a Nagib para crear tu aplicación web.">
 	<main class="px-4">
-		<SectionContainer>		
+		<SectionContainer class="py-44 pb-24">		
 			<img class="rounded-full size-12 mb-4" src="img/yo.jpg" alt="default photo">
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
+			<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
 				Hey, soy Nagib 
 				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center">
 					<Badge>Disponible para trabajar</Badge>
 				</a>
 			</h1>
-			<h2 class="text-2xl text-wrap">
+			<h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
 				<span>+2 experiencia.</span> 
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span> 
 				<span class="text-red-200/90">De Gran Canaria, España.</span>
 				<span class="opacity-75">Especializado en crear aplicaciones únicas</span>
 			</h2>
 
-			<nav class="flex gap-x-4 mt-6">
+			<nav class="flex gap-4 mt-8 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
-					<LinkedInIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+					<LinkedInIcon class="size-4 md:size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
 						LinkedIn
 				</SocialPill>
 				<SocialPill href="https://github.com/DeiMoS-es">
-					<GitHubIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
-						LinkedIn
+					<GitHubIcon class="size-4 md:size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+						GitHub
 				</SocialPill>
-				<SocialPill href="https://github.com/DeiMoS-es">
-					<MailIcon class="size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
+				<SocialPill href="mailto:nagib.86@gmail.com">
+					<MailIcon class="size-4 md:size-6" /> <!-- Para que el componente del icono pueda leer la clase que le añadimos, tenemos que añadir en el componente {...Astro.props} -->
 						nagib.86@gmail.com
 				</MailIcon>
 			</nav>
 		</SectionContainer>
 
-		<SectionContainer>
+		<SectionContainer id="experiencia">
+			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+				<Briefecase class="size-7" />
+				Experiencia laboral
+			</h2>
 			<Experience />
 		</SectionContainer>
 	</main>
