--- a/001-porfolio-dev/src/components/Header.astro
+++ b/001-porfolio-dev/src/components/Header.astro
@@ -2,7 +2,7 @@
     <nav class="flex flex-row gap-x-10 opacity-80">
         <a href="#top">Inicio</a>
         <a href="#experiencia">Experiencia</a>
-        <a href="#projectos">Proyectos</a>
+        <a href="#proyectos">Proyectos</a>
         <a href="#sobre-mi">Sobre mi</a>
         <a href="#contacto">Contacto</a>
     </nav>
