--- a/001-porfolio-dev/src/pages/index.astro
+++ b/001-porfolio-dev/src/pages/index.astro
@@ -8,6 +8,8 @@ import MailIcon from '../icons/Mail.astro';
 import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Briefecase from '../icons/Briefecase.astro';
+import CodeIcon from '../icons/Code.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contrata a Nagib para crear tu aplicación web.">
@@ -44,11 +46,19 @@ import Briefecase from '../icons/Briefecase.astro';
 		</SectionContainer>
 
 		<SectionContainer id="experiencia">
-			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
 				<Briefecase class="size-7" />
 				Experiencia laboral
 			</h2>
 			<Experience />
+		</SectionContainer>
+
+		<SectionContainer id="proyectos">
+			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+				<CodeIcon class="size-7" />
+				Proyectos
+			</h2>
+			<Projects />
 		</SectionContainer>
 	</main>
 
