--- a/001-porfolio-dev/src/components/Header.astro
+++ b/001-porfolio-dev/src/components/Header.astro
@@ -1,9 +1,26 @@
-<header class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto">    
-    <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="#top">Inicio</a>
-        <a href="#experiencia">Experiencia</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#sobre-mi">Sobre mi</a>
-        <a href="#contacto">Contacto</a>
+<header 
+class={`
+    flex justify-center items-center
+    mx-auto
+    py-5
+    sticky top-0 
+    w-full xl:w-[1120px]
+    z-10
+`}
+>    
+    <nav 
+        class={`
+            border border-black/50 rounded-full
+            px-3 py-1
+            flex flex-row items-center
+            bg-black/50 dark:bg-black/50
+            bacdrop-blur-2xl
+        `}
+    >
+        <a class="hover:bg-white/10 p-1 rounded-full px-3 transition" href="#top">Inicio</a>
+        <a class="hover:bg-white/10 p-1 rounded-full px-3 transition" href="/#experiencia">Experiencia</a>
+        <a class="hover:bg-white/10 p-1 rounded-full px-3 transition" href="/#proyectos">Proyectos</a>
+        <a class="hover:bg-white/10 p-1 rounded-full px-3 transition" href="/#sobre-mi">Sobre mi</a>
+        <a class="hover:bg-white/10 p-1 rounded-full px-3 transition" href="/#contacto">Contacto</a>
     </nav>
 </header>
