--- a/001-porfolio-dev/src/components/AboutMe.astro
+++ b/001-porfolio-dev/src/components/AboutMe.astro
@@ -1,4 +1,4 @@
-<section class="flex gap-x-8 justify-center items-center">
+<section class="flex flex-col md:flex-row gap-x-8 justify-center items-center">
     <div class=" [&>p]:mb-4 [&>p>strong]:text-yellow-400 [&>p>strong]:font-semibold text-pretty">
         <p>
             ¡Hola! Soy Nagib y soy de Canarias pero vivo en Madrid, estudié
