--- a/002-porfolio-nagib/src/components/Header.astro
+++ b/002-porfolio-nagib/src/components/Header.astro
@@ -1,5 +1,4 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-    <img class="rounded-full size-12" src="/img/yo.jpg" alt="foto nagib">
+<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
     <nav class="flex flex-row gap-x-10 opacity-80">
         <a href="/">Home</a>
         <a href="/about">About</a>
