--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -3,13 +3,16 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Badge from "../components/Badge.astro";
 import LinkedInIcon from "../icons/LinkedIn.astro";
+import SocialPill from "../components/SocialPill.astro";
+import GitHubIcon from "../icons/GitHub.astro";
+import MailIcon from "../icons/Mail.astro";
 ---
 
-<Layout title="Porfolio Nagib">
+<Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contratame para crear tu aplicación web">
 	<main>
 		<section class="w-full lg:w-[740px] mx-auto py-44">
 			<img class="rounded-full size-12 mb-4" src="/img/yo.jpg" alt="foto nagib">
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-10">
 				Hey, soy Nagib 
 				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center">
 					<Badge>Disponible para trabajar</Badge>
@@ -20,14 +23,20 @@ import LinkedInIcon from "../icons/LinkedIn.astro";
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span>				
 				<span class="text-red-200/90">De Gran Canaria, España.</span>
 			</h2>
-			<ul>
-				<li>
-					<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
-						<LinkedInIcon class="size-6" />
-						LinkedIn
-					</a>
-				</li>
-			</ul>
+			<nav class="flex gap-x-4 mt-6">
+				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
+					<LinkedInIcon class="size-6" />
+					LinkedIn
+				</SocialPill>
+				<SocialPill href="https://github.com/DeiMoS-es">
+					<GitHubIcon class="size-6" />
+					GitHub
+				</SocialPill>
+				<SocialPill href="mailto:nagib.86@gmail.com">
+					<MailIcon class="size-6" />
+					nagib.86@gmail.com
+				</SocialPill>
+			</nav>
 		</section>
 	</main>
 </Layout>
