agregado componentes de experiencia

--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -6,6 +6,7 @@ import LinkedInIcon from "../icons/LinkedIn.astro";
 import SocialPill from "../components/SocialPill.astro";
 import GitHubIcon from "../icons/GitHub.astro";
 import MailIcon from "../icons/Mail.astro";
+import Experience from "../components/Experience.astro";
 ---
 
 <Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contratame para crear tu aplicación web">
@@ -37,6 +38,10 @@ import MailIcon from "../icons/Mail.astro";
 					nagib.86@gmail.com
 				</SocialPill>
 			</nav>
+		</section>
+
+		<section>
+			<Experience />
 		</section>
 	</main>
 </Layout>
