--- a/002-porfolio-nagib/src/layouts/Layout.astro
+++ b/002-porfolio-nagib/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 // Supports weights 100-900
 import '@fontsource-variable/onest';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -22,9 +23,10 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+		<div class="absolute top-0 z-[-2] h-screen w-screen bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -41,5 +43,9 @@ const { title, description } = Astro.props;
 		flex-direction: column;
 		min-height: 100vh;
 	}
-	
+	@media(prefers-reduce-motion: reduce){
+		html{
+			scroll-behavior: auto;
+		}
+	}
 </style>
