--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -9,45 +9,55 @@ import MailIcon from "../icons/Mail.astro";
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import Briefcase from "../icons/Briefcase.astro";
+import CodeIcon from "../icons/Code.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contratame para crear tu aplicación web">
-	<main>
+	<main class="px-4">
 		<SectionContainer class="py-44 pb-20">
 			<img class="rounded-full size-12 mb-4" src="/img/yo.jpg" alt="foto nagib">
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-10">
+			<h1 class="text-white text-2xl md_text-4xl lg:text-5xl font-bold flex flex-row gap-x-2 pb-6 lg:pb-10">
 				Hey, soy Nagib 
 				<a href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/" target="_blank" rel="noopener" class="flex justify-center items-center">
 					<Badge>Disponible para trabajar</Badge>
 				</a>
 			</h1>
-			<h2 class="text-2xl text-wrap">
+			<h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
 				<span class="">+2 años experiencia.</span>				
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span>				
 				<span class="text-red-200/90">De Gran Canaria, España.</span>
 			</h2>
-			<nav class="flex gap-x-4 mt-6">
+			<nav class="flex gap-4 mt-6 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
-					<LinkedInIcon class="size-6" />
+					<LinkedInIcon class="size-4 md:size-6" />
 					LinkedIn
 				</SocialPill>
 				<SocialPill href="https://github.com/DeiMoS-es">
-					<GitHubIcon class="size-6" />
+					<GitHubIcon class="size-4 md:size-6" />
 					GitHub
 				</SocialPill>
 				<SocialPill href="mailto:nagib.86@gmail.com">
-					<MailIcon class="size-6" />
+					<MailIcon class="size-4 md:size-6" />
 					nagib.86@gmail.com
 				</SocialPill>
 			</nav>
 		</SectionContainer>
 
 		<SectionContainer id="experiencia">
-			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
 				<Briefcase class="size-7"/>
 				Experiencia laboral
 			</h2>
 			<Experience />
+		</SectionContainer>
+
+		<SectionContainer id="proyectos">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<CodeIcon class="size-7"/>
+				Proyectos
+			</h2>
+			<Projects />
 		</SectionContainer>
 	</main>
 </Layout>
