--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -26,7 +26,9 @@ import Projects from "../components/Projects.astro";
 			<h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
 				<span class="">+2 años experiencia.</span>				
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span>				
-				<span class="text-red-200/90">De Gran Canaria, España.</span>
+				<span>Full Stack.</span>
+				<span class="text-red-200/90">Viviendo en Madrid</span>
+				<span class="opacity-75">De Gran Canaria, España.</span>
 			</h2>
 			<nav class="flex gap-4 mt-6 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
