--- a/002-porfolio-nagib/src/components/SocialPill.astro
+++ b/002-porfolio-nagib/src/components/SocialPill.astro
@@ -6,7 +6,7 @@
     py-1 px-2 md:py-2 md:px-4 
     text-xs md:text-base
     transition
-    hover:scale-110 hover:bg-white/10 `}
+    hover:scale-110 hover:bg-sky-200/90 `}
     {...Astro.props} target="_blank" rel="noopener noreferrer">
     <slot />
 </a>
