--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -1,16 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
+import AboutMe from "../components/AboutMe.astro";
 import Badge from "../components/Badge.astro";
-import LinkedInIcon from "../icons/LinkedIn.astro";
-import SocialPill from "../components/SocialPill.astro";
-import GitHubIcon from "../icons/GitHub.astro";
-import MailIcon from "../icons/Mail.astro";
-import Experience from "../components/Experience.astro";
-import SectionContainer from "../components/SectionContainer.astro";
 import Briefcase from "../icons/Briefcase.astro";
 import CodeIcon from "../icons/Code.astro";
+import Experience from "../components/Experience.astro";
+import GitHubIcon from "../icons/GitHub.astro";
+import LinkedInIcon from "../icons/LinkedIn.astro";
+import MailIcon from "../icons/Mail.astro";
+import ProfileCheck from "@/icons/ProfileCheck.astro";
 import Projects from "../components/Projects.astro";
+import SectionContainer from "../components/SectionContainer.astro";
+import SocialPill from "../components/SocialPill.astro";
 ---
 
 <Layout title="Porfolio de Nagib - Desarrollador y Programador Web" description="Contratame para crear tu aplicación web">
@@ -27,7 +28,7 @@ import Projects from "../components/Projects.astro";
 				<span class="">+2 años experiencia.</span>				
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span>				
 				<span>Full Stack.</span>
-				<span class="text-red-200/90">Viviendo en Madrid</span>
+				<span class="text-red-200/90">Viviendo en Madrid.</span>
 				<span class="opacity-75">De Gran Canaria, España.</span>
 			</h2>
 			<nav class="flex gap-4 mt-6 flex-wrap">
@@ -60,6 +61,14 @@ import Projects from "../components/Projects.astro";
 				Proyectos
 			</h2>
 			<Projects />
+		</SectionContainer>
+
+		<SectionContainer id="sobre-mi">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<ProfileCheck class="size-7"/>
+				Sobre mi
+			</h2>
+			<AboutMe />
 		</SectionContainer>
 	</main>
 </Layout>
