modificado about me

--- a/002-porfolio-nagib/src/components/AboutMe.astro
+++ b/002-porfolio-nagib/src/components/AboutMe.astro
@@ -4,8 +4,7 @@
             ¡Hola! Soy Nagib y soy de Canarias pero vivo en Madrid, estudié
             cocina pero siempre mostré curiosidad por el mundo de la
             programación. A los 14 años, ya estaba creando mi horario de clases
-            utilizando HTML, lo cual marcó el inicio de mi fascinación por la
-            programación. <strong>Actualmente estoy trabajando en Hiberus</strong>.
+            utilizando HTML. <strong>Actualmente estoy trabajando en Hiberus</strong>.
         </p>
 
         <p>
