--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -29,7 +29,7 @@ import SocialPill from "../components/SocialPill.astro";
 				<span class="text-yellow-200/90">Desarrollador aplicaciones Web.</span>				
 				<span>Full Stack.</span>
 				<span class="text-red-200/90">Viviendo en Madrid.</span>
-				<span class="opacity-75">De Gran Canaria, España.</span>
+				<!-- <span class="opacity-75">De Gran Canaria, España.</span> -->
 			</h2>
 			<nav class="flex gap-4 mt-6 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/nagib-delgado-morales-5456101b6/">
