--- a/002-porfolio-nagib/src/layouts/Layout.astro
+++ b/002-porfolio-nagib/src/layouts/Layout.astro
@@ -15,14 +15,23 @@ const { title, description } = Astro.props;
 <!doctype html>
 <html lang="es">
 	<head>
-		<!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-			})(window,document,'script','dataLayer','GTM-NFGT3J6Z');
-		</script>
-		<!-- End Google Tag Manager -->
+		<script type="module">
+			Astro.onLoad(() => {
+				(function(w,d,s,l,i){
+					w[l]=w[l]||[];
+					w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+					var f=d.getElementsByTagName(s)[0],
+					j=d.createElement(s),
+					dl=l!='dataLayer'?'&l='+l:'';
+					j.async=true;
+					j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+					if (f && f.parentNode) {
+						f.parentNode.insertBefore(j,f);
+					}
+				})(window,document,'script','dataLayer','GTM-NFGT3J6Z');
+			});
+		</script>		
+	
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
