--- a/002-porfolio-nagib/src/layouts/Layout.astro
+++ b/002-porfolio-nagib/src/layouts/Layout.astro
@@ -15,22 +15,16 @@ const { title, description } = Astro.props;
 <!doctype html>
 <html lang="es">
 	<head>
-		<script type="module">
-			Astro.onLoad(() => {
-				(function(w,d,s,l,i){
-					w[l]=w[l]||[];
-					w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
-					var f=d.getElementsByTagName(s)[0],
-					j=d.createElement(s),
-					dl=l!='dataLayer'?'&l='+l:'';
-					j.async=true;
-					j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
-					if (f && f.parentNode) {
-						f.parentNode.insertBefore(j,f);
-					}
-				})(window,document,'script','dataLayer','GTM-NFGT3J6Z');
-			});
-		</script>		
+		<!-- Google tag (gtag.js) -->
+		<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=GTM-NFGT3J6Z"></script>
+		<script type="text/partytown">
+		    window.dataLayer = window.dataLayer || [];
+		    function gtag(){dataLayer.push(arguments);}
+		    gtag('js', new Date());
+		
+		    gtag('config', 'GTM-NFGT3J6Z');
+		</script>
+		<!-- End Google Tag Manager -->
 	
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
