--- a/002-porfolio-nagib/src/layouts/Layout.astro
+++ b/002-porfolio-nagib/src/layouts/Layout.astro
@@ -16,14 +16,16 @@ const { title, description } = Astro.props;
 <html lang="es">
 	<head>
 	<!-- Google Tag Manager -->
-	<script type="text/partytown">
-		(function(w,d,s,l,i){w[l]=w[l]||[];
-			w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
+	<script>
+		(function(w,d,s,l,i){(w as any)[l]=(w as any)[l]||[];
+			(w as any)[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
 			var f=d.getElementsByTagName(s)[0],
 				j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
-				j.async=true;
-				j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
-				f.parentNode.insertBefore(j,f);
+				(j as HTMLScriptElement).async = true;
+				(j as HTMLScriptElement).src = 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
+				if (f && f.parentNode) {
+    				f.parentNode.insertBefore(j, f);
+				}
 		})
 		(window,document,'script','dataLayer','GTM-T7ZHV2WL');
 	</script>
