--- a/002-porfolio-nagib/src/pages/index.astro
+++ b/002-porfolio-nagib/src/pages/index.astro
@@ -74,6 +74,7 @@ import Contacto from "../components/Contacto.astro";
 
 		<SectionContainer id="contacto" class="flex flex-col">
 			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<MailIcon class="size-4 md:size-6" />
 				Contacto				
 			</h2>
 			<Contacto />
