--- a/nadi-web/src/layouts/Layout.astro
+++ b/nadi-web/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 const { title } = Astro.props;
+import '@fontsource/lato';
 ---
 
 <!doctype html>
@@ -33,7 +34,7 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: 'Lato',system-ui, sans-serif;
 		background: #13151a;
 	}
 	code {
