--- a/nadi-web/src/layouts/Layout.astro
+++ b/nadi-web/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ import '@fontsource/lato';
 	</body>
 </html>
 <style is:global>
+	
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -32,10 +33,12 @@ import '@fontsource/lato';
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
+		
 	}
 	html {
-		font-family: 'Lato',system-ui, sans-serif;
-		background: #13151a;
+		font-family: 'Open Sans',system-ui, sans-serif;
+		background: #C3ACCE;
+		color: #fff;
 	}
 	code {
 		font-family:
