--- a/nadi-web/src/pages/index.astro
+++ b/nadi-web/src/pages/index.astro
@@ -1,10 +1,20 @@
 ---
+import "../styles/reset.css";
+import "../styles/index.css";
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+import Header from '../components/header/Header.astro';
+import Footer from '../components/footer/Footer.astro';
 ---
-
-<Layout title="Welcome to NadiWeb.">
+<Layout title="Welcome to NadiWeb.">	
+	<Header />
 	<main>
-		<Header />
+		<div class="personal">
+			<span class="saludo"><h2>¡Hola! Soy Nadira Delgado</h2></span>
+			<span class="textBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam perferendis, rerum sequi distinctio, voluptatem assumenda sunt hic natus possimus consequatur libero eos earum itaque totam quibusdam magni eligendi molestiae minus!</span>			
+			<span class="imgBox">
+				<img src="../../public/img/avatar.jpg" alt="Img de nadira">
+			</span>
+		</div>
 	</main>
+	<Footer />	
 </Layout>
