--- a/nadi-web/src/pages/index.astro
+++ b/nadi-web/src/pages/index.astro
@@ -4,6 +4,7 @@ import "../styles/index.css";
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
+import SocialLinks from "../components/social/SocialLinks.astro";
 ---
 <Layout title="Welcome to NadiWeb.">	
 	<Header />
@@ -16,5 +17,6 @@ import Footer from '../components/footer/Footer.astro';
 			</span>
 		</div>
 	</main>
+	<SocialLinks />
 	<Footer />	
 </Layout>
