agregado componente Formacion con estilos y listado de servicios, actualizado el diseño de la página principal

--- a/nadi-web/src/pages/index.astro
+++ b/nadi-web/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import SocialLinks from "../components/social/SocialLinks.astro";
+import Formacion from "../components/formacion/Formacion.astro";
 ---
 <Layout title="Welcome to NadiWeb.">	
 	<Header />
@@ -17,6 +18,7 @@ import SocialLinks from "../components/social/SocialLinks.astro";
 			</span>
 		</div>
 	</main>
+	<Formacion />
 	<SocialLinks />
 	<Footer />	
 </Layout>
