--- a/nadi-web/src/components/formacion/Formacion.css
+++ b/nadi-web/src/components/formacion/Formacion.css
@@ -35,8 +35,8 @@
 }
 
 .services ul li img{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     /* padding: 1rem; */
     margin-bottom: 1rem;
 }
