--- a/nadi-web/src/layouts/Layout.astro
+++ b/nadi-web/src/layouts/Layout.astro
@@ -5,6 +5,9 @@ interface Props {
 
 const { title } = Astro.props;
 import '@fontsource/lato';
+import Header from '../components/header/Header.astro';
+import Footer from '../components/footer/Footer.astro';
+import '../styles/reset.css';
 ---
 
 <!doctype html>
@@ -17,12 +20,15 @@ import '@fontsource/lato';
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body>		
+		<Header />
+		<main>
+			<slot />		
+		</main>
+		<Footer />	
 	</body>
 </html>
-<style is:global>
-	
+<style is:global>	
 	:root {
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
@@ -40,15 +46,9 @@ import '@fontsource/lato';
 		background: #C3ACCE;
 		color: #fff;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+	main{
+    	width: 100vw;
+    	min-height: 40vh;
+    	margin-top: 1rem;
 	}
 </style>
