actualizado el componente Header con iconos en los botones de navegación y mejoras en el estilo; ajustados estilos en HeaderButton

--- a/nadi-web/src/components/header/Header.astro
+++ b/nadi-web/src/components/header/Header.astro
@@ -6,9 +6,60 @@ import HeaderButton from "./HeaderButton.astro";
     <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
     <nav>
         <ul>
-            <li><HeaderButton href="/">Home</HeaderButton></li>
-            <li><HeaderButton href="/aboutMe">Sobre Mi</HeaderButton></li>
-            <li><HeaderButton href="/services">Servicios</HeaderButton></li>
+            <li><HeaderButton href="/">
+                <svg  
+                    slot="before" 
+                    width="24"  
+                    height="24"  
+                    viewBox="0 0 24 24"  
+                    fill="none"  
+                    stroke="currentColor"  
+                    stroke-width="2"  
+                    stroke-linecap="round"  
+                    stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+                        <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+                        <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
+                </svg>
+                Home
+                </HeaderButton>
+            </li>
+            <li><HeaderButton href="/aboutMe">
+                <svg 
+                    slot="before" 
+                    width="24"  
+                    height="24"  
+                    viewBox="0 0 24 24"  
+                    fill="none"  
+                    stroke="currentColor"  
+                    stroke-width="2"  
+                    stroke-linecap="round"  
+                    stroke-linejoin="round"  
+                    class="">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+                        <path d="M12 9h.01" /><path d="M11 12h1v4h1" />
+                </svg>
+                Sobre Mi
+                </HeaderButton>
+            </li>
+            <li><HeaderButton href="/services">
+                <svg  
+                    xmlns="http://www.w3.org/2000/svg"  
+                    width="24"  
+                    height="24"  
+                    viewBox="0 0 24 24"  
+                    fill="none"  
+                    stroke="currentColor"  
+                    stroke-width="2"  
+                    stroke-linecap="round"  
+                    stroke-linejoin="round"  
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-heart">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
+                </svg>
+                Servicios</HeaderButton></li>
         </ul>
     </nav>
 </header>
