--- a/nadi-web/src/components/header/Header.css
+++ b/nadi-web/src/components/header/Header.css
@@ -9,19 +9,24 @@ header {
 nav ul {
     display: flex;
     justify-content: space-evenly;
-    /* flex-wrap: wrap; */
-    /* gap: 1rem; */
+    flex-wrap: wrap;
+    gap: 1rem;
     list-style: none;
     padding-top: 1rem;
     font-weight: 100;
 }
 nav a {
-    display: block;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     transition: transform 0.3s ease, text-decoration 0.3s ease;
     color: white;
+    margin-right: 1rem;
 }
 nav a:hover {
     text-decoration: underline;
     transform: scale(1.2);
+}
+nav a svg {
+    margin-right: 0.5rem;
 }
