--- a/nadi-web/src/components/header/HeaderButton.astro
+++ b/nadi-web/src/components/header/HeaderButton.astro
@@ -6,5 +6,7 @@ interface Props {
 const { href } = Astro.props as Props;
 ---
 <a class="headerButton" href={href} >
+    <slot name="before"/>
     <slot />
+    <slot name="after"/>
 </a>
